flicker when fav click fix

--- a/style.css
+++ b/style.css
@@ -3941,13 +3941,6 @@ html[data-theme="mgl"] .theme-bg .bg-new-stripe{
     border: #000 solid 3px;
 }
 
-.last_edit{
-
-}
-
-
-
-
 .profile_games {
     display: grid;
     gap: 24px;
